# QtCV

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  Image.h  ImageProvider.h  applicationdata.h  cppsignalslot.h
src/: Application.cpp  Image.cpp  ImageProvider.cpp  cppsignalslot.cpp  main.cpp
ui/: main.qml
